# MdVis

./: .gitignore  2CMakeLists.txt  CMakeLists.txt  LICENSE  README.md
MdVis/: MdVis.sln  MdVis.vcxproj  MdVis.vcxproj.filters
demo/: demo_a_big.traj
libs/glew-2.1.0/: glew.pc
shader/: c_shader.comp  c_shader_cub.comp  c_shader_lin.comp  c_shader_no.comp  draw.frag  draw.vert  fxaa_shader.frag  fxaa_shader.vert  g_shader.frag  g_shader.vert  gui_shader.frag  gui_shader.vert  l_shader.frag  l_shader_ssao.frag  spline_shader.comp  ssao_blur_shader.frag  ssao_blur_shader.vert  ssao_shader.frag  ssao_shader.vert  t_shader.comp  widget_shader.frag  widget_shader.vert
shader/compute/: time.comp  time1.comp
src/: Defines.h  GL.cpp  GL.h  OBJ_Loader.h  Spline.hpp  main.cpp  xoshiro.h
